Issue certificates with Pedersen commitments
Certificates optionally will verify a provided Pedersen commitment and
issue a certificate whose identity is the hash of all provided
commitments.

This also adds a library for Pedersen commitments and a Schnorr prover
and verifier.

Also added benchmarking in the tests.
